# picup

./: Cargo.toml  LICENSE  readme.md
picup-cli/: Cargo.toml
picup-cli/src/: main.rs
picup-gui/: Cargo.toml
picup-gui/src-tauri/: Cargo.toml  tauri.conf.json
picup-lib/: Cargo.toml
picup-lib/src/: lib.rs
picup-srv/: Cargo.toml  build.rs  picup-srv.toml
picup-srv/src/: main.rs
picup-vue/: package.json  pnpm-lock.yaml  vite.config.js
picup-vue/src/: App.vue  main.js  style.css
picup-vue/src/components/: HelloWorld.vue
