[workspace]
members = ["picup-srv", "picup-cli", "picup-lib", "picup-gui", "picup-gui/src-tauri"]
# exclude = [ "picup-gui/tauri-src" ]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7.4", features = ["multipart", "query"] }
clap = { version = "4.5.1", features = ["derive", "cargo"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "fs", "signal"] }
tokio-util = { version = "0.7.10", features = ["io"] }
urlencoding = "2.1.3"
picup-lib = { path = "../picup-lib" }
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["serde_derive", "derive"] }
reqwest = { version = "0.11.24", features = ["blocking", "multipart", "json"] }
serde_json = "1.0.114"
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
tauri = { version = "1", features = ["shell-open"] }
