[workspace]
members = ["picup-srv", "picup-cli", "picup-lib"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7.4", features = ["multipart", "query"] }
clap = { version = "4.5.1", features = ["derive", "cargo"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "fs", "signal"] }
tokio-util = { version = "0.7.10", features = ["io"] }
urlencoding = "2.1.3"
tower-http = { version = "0.5.2", features = ["trace", "timeout", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["serde_derive", "derive"] }
reqwest = { version = "0.11.24", features = ["blocking", "multipart", "json"] }
serde_json = "1.0.114"
