[package]
name = "picup-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["serde_derive"] }
axum = { version = "0.7.4" }
reqwest = { version = "0.11.24", features = ["blocking", "multipart", "json"] }
serde_json = "1.0.114"
