[package]
name = "picup-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
