[package]
name = "picup-srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["multipart", "query"] }
clap = { version = "4.5.1", features = ["derive", "cargo"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "fs", "signal"] }
tokio-util = { version = "0.7.10", features = ["io"] }
urlencoding = "2.1.3"
picup-lib = { path = "../picup-lib" }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
