[package]
name = "picup-srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
urlencoding = { workspace = true }
picup-lib = { path = "../picup-lib" }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
